# g14cam

Coursework1/: .gitignore  CMakeLists.txt  CubicSpline.cpp  CubicSpline.hpp  CubicSplinePeriodic.cpp  CubicSplinePeriodic.hpp  RootFinding.cpp  RootFinding.hpp  main.cpp
Coursework2/Code/: .gitignore  CMakeLists.txt  GaussQuadrature.cpp  GaussQuadrature.hpp  IGaussQuadrature.hpp  IUtility.hpp  ODE.cpp  ODE.hpp  Problem2.cpp  Problem2.hpp  Problem3.cpp  Problem3.hpp  StokesPDE.cpp  StokesPDE.hpp  Utility.cpp  Utility.hpp  helper.hpp  main.cpp
Coursework2/Excel/: Problem2.xlsx  Problem3.xlsx  Problem3b.xlsx
Coursework2/Matlab/: 2BRK2_i.avi  PRB2BHMTSECOND.m  PRB2BIM1TH.m  PRB2BRK2TH.m  PRB2CTT.m  PRB3AERROR.m  PRB3BQUIVER.m  PRB3BQUIVER_MAT_TEST.m  PRB3CONTOUR.m  Problem1a.m  Problem1d.m  Problem1ef.m  Problem2B2RK2.m  Problem2BIM1.m  Problem2BIM2.m  Problem2BRK2.m  Problem2BRK2movie.m  Problem2a.m  Problem2aError.m  Problem2aErrorIMP.m  Problem2aImplicitMidpoint.m  contour1.asv  contour1.m  poisson.m  test2.m  test3.m  test4.m  testpde.m
Coursework2/Matlab/navier_stokes/: ns2de_gnuplot.m  resid_lukas.m  resid_poiseuille.m  resid_spiral.m  resid_taylor.m  resid_vortex.m  rhs_lukas.m  rhs_poiseuille.m  rhs_spiral.m  rhs_taylor.m  rhs_vortex.m  uvp_lukas.m  uvp_poiseuille.m  uvp_taylor.m  uvp_vortex.m
navier_stokes/: CMakeLists.txt  main.cpp  ns2de.cpp  ns2de.hpp
